# himalaya-lib

./: CHANGELOG.md  Cargo.toml  README.md  flake.nix
src/: config.rs  lib.rs  process.rs  sync.rs
src/account/: account_config.rs  deserialized_account_config.rs  deserialized_config.rs  mod.rs
src/backend/: backend.rs  config.rs  id_mapper.rs  mod.rs  thread_safe_backend.rs
src/backend/imap/: backend.rs  config.rs  error.rs  imap_backend.rs  imap_envelope.rs  imap_envelopes.rs  imap_flag.rs  imap_flags.rs  mod.rs  msg_sort_criterion.rs
src/backend/maildir/: backend.rs  config.rs  error.rs  maildir_backend.rs  maildir_envelope.rs  maildir_envelopes.rs  maildir_flag.rs  maildir_flags.rs  mod.rs
src/backend/notmuch/: backend.rs  error.rs  mod.rs  notmuch_backend.rs  notmuch_envelope.rs  notmuch_envelopes.rs
src/config/: account.rs  backend.rs  config.rs  email.rs  global.rs  imap.rs  maildir.rs  mod.rs  notmuch.rs  smtp.rs
src/domain/: mod.rs
src/domain/account/: config.rs  mod.rs
src/domain/email/: addr.rs  attachment.rs  config.rs  email.rs  mod.rs  parts.rs  tpl.rs  utils.rs
src/domain/envelope/: envelope.rs  envelopes.rs  mod.rs
src/domain/envelope/imap/: envelope.rs  envelopes.rs  mod.rs  sort_criterion.rs
src/domain/envelope/maildir/: envelope.rs  envelopes.rs
src/domain/envelope/notmuch/: envelope.rs  envelopes.rs  mod.rs
src/domain/envelope/sync/: cache.rs  error.rs  sync.rs
src/domain/flag/: flag.rs  flags.rs  mod.rs  sync.rs
src/domain/flag/imap/: flag.rs  flags.rs
src/domain/flag/maildir/: flag.rs  flags.rs
src/domain/folder/: folder.rs  folders.rs  mod.rs
src/domain/folder/sync/: cache.rs  error.rs  sync.rs
src/email/: email.rs  envelope.rs  envelopes.rs  error.rs  flag.rs  mod.rs  parts.rs  tpl.rs
src/folder/: folder.rs  folders.rs  mod.rs
src/mbox/: mbox.rs  mboxes.rs  mod.rs
src/msg/: addr.rs  error.rs  flags.rs  mod.rs  msg.rs  msg_utils.rs  parts.rs
src/sender/: mod.rs  sender.rs
src/sender/sendmail/: sendmail.rs
src/sender/smtp/: config.rs  mod.rs  smtp.rs
src/sync/: cache.rs  mod.rs
src/sync/envelope/: cache.rs  mod.rs  sync.rs
src/sync/folder/: cache.rs  mod.rs  sync.rs
tests/: test_imap_backend.rs  test_maildir_backend.rs  test_notmuch_backend.rs  test_sendmail_sender.rs  test_smtp_sender.rs  test_sync.rs
