[package]
name = "himalaya-lib"
version = "0.4.0"
description = "Rust library for email management."
authors = ["soywod <clement.douin@posteo.net>"]
edition = "2021"
license = "MIT"

[features]
imap-backend = ["imap", "imap-proto", "utf7-imap"]
maildir-backend = ["maildir", "md5"]
notmuch-backend = ["notmuch", "maildir-backend"]
smtp-sender = []
default = ["imap-backend", "maildir-backend", "notmuch-backend", "smtp-sender"]

[dependencies]
ammonia = "3.1.2"
chrono = "0.4.19"
convert_case = "0.5.0"
html-escape = "0.2.9"
lettre = { version = "=0.10.0-rc.7", features = ["serde"] }
log = "0.4.14"
mailparse = "0.13.6"
native-tls = "0.2.8"
regex = "1.5.4"
rfc2047-decoder = "=0.2.0"
serde = { version = "1.0.118", features = ["derive"] }
shellexpand = "2.1.0"
thiserror = "1.0.31"
tree_magic = "0.2.3"
uuid = { version = "0.8", features = ["v4"] }

# [dependencies.optional]
imap = { version = "=3.0.0-alpha.4", optional = true }
imap-proto = { version = "=0.14.3", optional = true }
maildir = { version = "=0.6.1", optional = true }
md5 = { version = "0.7.0", optional = true }
notmuch = { version = "=0.7.1", optional = true }
utf7-imap = { version = "=0.3.2", optional = true }
