[package]
name = "himalaya-lib"
version = "0.5.0"
description = "Rust library for email management."
authors = ["soywod <clement.douin@posteo.net>"]
edition = "2021"
license = "MIT"

[features]
imap-backend = ["imap", "imap-proto", "utf7-imap"]
maildir-backend = ["maildir", "md5"]
notmuch-backend = ["notmuch", "maildir-backend"]
smtp-sender = []
default = ["imap-backend", "maildir-backend", "smtp-sender"]

[dev-dependencies]
concat-with = "0.2"
env_logger = "0.10"
tempfile = "3.3"
criterion = "0.4"

[dependencies]
ammonia = "3.2"
chrono = "0.4"
convert_case = "0.5"
dirs = "4.0"
html-escape = "0.2"
lettre = { version = "=0.10.1", features = ["serde"] }
log = "0.4"
mailparse = "0.14"
mime-msg-builder = "0.1"
native-tls = "0.2"
ouroboros = "0.15"
proc-lock = "0.4"
rayon = "1.6"
regex = "1.5"
rfc2047-decoder = "=0.2.0"
rusqlite = { version = "0.28", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
shellexpand = "2.1"
thiserror = "1.0"
tree_magic = "0.2"
urlencoding = "2.1"
uuid = { version = "0.8", features = ["v4"] }

# [dependencies.optional]
imap = { version = "=3.0.0-alpha.9", optional = true }
imap-proto = { version = "=0.16.2", optional = true }
maildir = { version = "=0.6.3", optional = true }
md5 = { version = "0.7.0", optional = true }
notmuch = { version = "=0.8.0", optional = true }
utf7-imap = { version = "=0.3.2", optional = true }

[[bench]]
name = "sync"
harness = false
